code wrapping fix

--- a/themes/CasperTweaked/assets/css/tweaks.css
+++ b/themes/CasperTweaked/assets/css/tweaks.css
@@ -9,3 +9,11 @@
 .main-nav.overlay {
   background: none;
 }
+
+pre {
+  word-wrap: normal;
+}
+
+pre code {
+  white-space: pre;
+}
